--- a/Nabeel's notebook.ipynb
+++ b/Nabeel's notebook.ipynb
@@ -652,7 +652,10 @@
     }
    ],
    "source": [
+    "# Sorted by Conference and ELO value in descending order and renamed columns\n",
     "ELOsorted_df=ELO_df.sort_values(['CONF','ELO'], ascending=False).rename(columns={'CONF':'CONFERENCE'})\n",
+    "\n",
+    "# Set Conference as the index\n",
     "ELOcleaned_df = ELOsorted_df.set_index('CONFERENCE')\n",
     "ELOcleaned_df"
    ]
